Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10989

Explorer attempts to browse a folder that doesn't exists

    XMLWordPrintable

Details

    Description

      If the user tries to go to a folder that doesn't exists, the explorer will attempt to browse to it. The icon in the title bar will become a white square and the address bar text will be the non-existent folder. Under XP, it will only show a message box about not being able to find the folder and it will do nothing else.

      Attachments

        Activity

          People

            Smiley Giannis Adamopoulos
            Pi_User5 Pi_User5
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: